# PipelineCpp

./: .gitignore  CMakeLists.txt  README.md
includes/: PipelineCpp.h  PipelineCpp.hpp
samples/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  PipelineCpp.cpp
